syntax = "proto2";

package midi;

enum TRACK_TYPE {
  OPZ_KICK_TRACK = 0;
  OPZ_SNARE_TRACK = 1;
  OPZ_HIHAT_TRACK = 2;
  OPZ_SAMPLE_TRACK = 3;
  OPZ_BASS_TRACK = 4;
  OPZ_LEAD_TRACK = 5;
  OPZ_ARP_TRACK = 6;
  OPZ_CHORD_TRACK = 7;
  AUX_DRUM_TRACK = 8;
  AUX_INST_TRACK = 9;
  STANDARD_TRACK = 10;
  STANDARD_DRUM_TRACK = 11;
  STANDARD_BOTH = 12;
  OPZ_INVALID_DRUM_TRACK = 13;
  OPZ_INVALID_SAMPLE_TRACK = 14;
  OPZ_INVALID_BASS_TRACK = 15;
  NUM_TRACK_TYPES = 16;
}